@@ -6,4 +6,3 @@ README
 t/000_basic.t
 t/950_pod.t
 t/960_pod_coverage.t
-t/990_kwalitee.t
