@@ -1,3 +1,6 @@
+Version
++ Removed Kwalitee tests
+
 Version 2009110702
 + Fix prerequisites.
 
